 2014-10-28 13:41  alexpeshkoff 
   M src/remote/remote.h
   M src/remote/server/server.cpp
Fixed a bug in unofficial release of beta1 reported by Martijn in devel - missing security context error when using separate SecurityDatabase

 2014-10-25 18:39  asfernandes 
   M src/jrd/exe.cpp
   M src/jrd/fun.epp
   M src/jrd/jrd.cpp
   M src/jrd/pag.cpp
   M src/jrd/svc.cpp
   M src/jrd/tra.cpp
   M src/jrd/validation.cpp
   M src/msgs/messages2.sql
   M src/remote/client/interface.cpp
   M src/remote/server/os/posix/inet_server.cpp
   M src/remote/server/os/win32/srvr_w32.cpp
   M src/remote/server/server.cpp
   M src/utilities/gstat/dba.epp
   M src/utilities/ntrace/TracePluginImpl.cpp
   M src/utilities/ntrace/traceplugin.cpp
   M src/yvalve/MasterImplementation.cpp
   M src/yvalve/PluginManager.cpp
   M src/yvalve/utl.cpp
   M src/yvalve/why.cpp
Misc.

 2014-10-21 14:53  hvlad 
   M src/jrd/cch.cpp
Improved page cache performance a bit. 
The case when page buffer is evicted and re-assigned to another page.

 2014-10-16 16:35  dimitr 
   M src/dsql/StmtNodes.cpp
   M src/dsql/StmtNodes.h
   M src/dsql/parse.y
   M src/jrd/blr.h
   M src/yvalve/gds.cpp
Improvement CORE-3526: Support for WHEN SQLSTATE.

 2014-10-16 15:16  alexpeshkoff 
   M src/isql/InputDevices.cpp
   M src/isql/isql.epp
Fixed CORE-4578: INPUT file not properly closed

 2014-10-16 12:42  alexpeshkoff 
   M builds/install/arch-specific/linux/makeInstallImage.sh.in
Resolved packaging issue - added boost files to linux binary package

 2014-10-16 11:31  alexpeshkoff 
   M src/jrd/cch.cpp
   M src/jrd/cch_proto.h
   M src/jrd/jrd.cpp
Fixed CORE-4582: Within linger period one can not change some database properties

 2014-10-16 10:36  alexpeshkoff 
   M examples/dbcrypt/CryptApplication.cpp
   M examples/dbcrypt/CryptKeyHolder.cpp
   M examples/dbcrypt/DbCrypt.cpp
Fixed build errors

 2014-10-16 07:32  dimitr 
   M doc/WhatsNew
Added missing parts of the docs.

 2014-10-15 15:45  asfernandes 